--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>🍜 POS ร้านขนมจีน</title>
 
-<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<!-- Tailwind -->
 <script src="https://cdn.tailwindcss.com"></script>
-
-<!-- QRCode Generator (ตัวนี้ชัวร์) -->
-<script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.js"></script>
 </head>
 
 <body class="bg-slate-900 text-white p-3">
@@ -50,7 +44,7 @@
 
     <!-- โอนเงิน -->
     <div id="transferBox" class="hidden text-center">
-      <div id="qrBox" class="flex justify-center mb-3"></div>
+      <img id="ppQR" class="mx-auto mb-3 w-56" />
       <div class="text-sm opacity-80 mb-2">สแกนเพื่อโอนเงิน</div>
       <button onclick="confirmPay('transfer')" class="bg-indigo-600 w-full py-2 rounded">
         ✅ ยืนยันรับโอน
@@ -83,7 +77,14 @@
 /* ================= CONFIG ================= */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const PROMPTPAY_ID = "0936494961"; // 🔴 ใส่ PromptPay ร้านคุณ
+
+/*
+  PROMPTPAY_ID ใส่ได้ 3 แบบ
+  - เบอร์โทร: 0812345678
+  - เลขบัตรประชาชน
+  - เลขผู้เสียภาษี
+*/
+const PROMPTPAY_ID = "0812345678";
 
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -137,6 +138,7 @@ function renderBill() {
 /* ================= PAYMENT ================= */
 function checkout(type) {
   if (!cart.length) return alert('ยังไม่มีรายการ');
+
   const total = cart.reduce((s,i)=>s+i.price*i.qty,0);
 
   document.getElementById('payModal').classList.remove('hidden');
@@ -147,7 +149,11 @@ function checkout(type) {
   if (type === 'transfer') {
     document.getElementById('payTitle').innerText = `📲 โอนเงิน ${total} บาท`;
     document.getElementById('transferBox').classList.remove('hidden');
-    genQR(total);
+
+    // 🔥 ใช้ promptpay.io (สแกนได้จริง)
+    const amount = total.toFixed(2);
+    document.getElementById('ppQR').src =
+      `https://promptpay.io/${PROMPTPAY_ID}/${amount}.png`;
   } else {
     document.getElementById('payTitle').innerText = `💵 เงินสด ${total} บาท`;
     document.getElementById('cashBox').classList.remove('hidden');
@@ -169,6 +175,7 @@ function calcChange() {
 /* ================= CONFIRM ================= */
 async function confirmPay(type) {
   const total = cart.reduce((s,i)=>s+i.price*i.qty,0);
+
   if (type === 'cash') {
     const cash = Number(document.getElementById('cashInput').value || 0);
     if (cash < total) return alert('รับเงินไม่พอ');
@@ -199,39 +206,6 @@ async function confirmPay(type) {
   renderBill();
   closeModal();
   alert('บันทึกเรียบร้อย');
-}
-
-/* ================= PROMPTPAY QR ================= */
-function genQR(amount) {
-  const payload = genPromptPayPayload(PROMPTPAY_ID, amount);
-  const qr = qrcode(0, 'M');
-  qr.addData(payload);
-  qr.make();
-  document.getElementById('qrBox').innerHTML = qr.createSvgTag(6, 6);
-}
-
-function genPromptPayPayload(id, amount) {
-  function f(i,v){return i+v.length.toString().padStart(2,'0')+v}
-  let p="000201"
-    +f("01","12")
-    +f("29",f("00","A000000677010111")+f("01",id))
-    +f("53","764")
-    +f("54",amount.toFixed(2))
-    +f("58","TH")
-    +f("62",f("07","POS"))
-    +"6304";
-  return p+crc16(p).toString(16).toUpperCase().padStart(4,'0');
-}
-
-function crc16(s){
-  let c=0xFFFF;
-  for(let ch of s){
-    c^=ch.charCodeAt(0)<<8;
-    for(let i=0;i<8;i++){
-      c=c&0x8000?(c<<1)^0x1021:c<<1;
-    }
-  }
-  return c&0xFFFF;
 }
 
 loadProducts();
