--- a/index.html
+++ b/index.html
@@ -31,25 +31,53 @@
   </div>
 </div>
 
-<!-- ปุ่มชำระเงิน -->
+<!-- ชำระเงิน -->
 <div class="flex gap-2">
   <button onclick="checkout('cash')" class="flex-1 bg-emerald-600 py-3 rounded text-lg">💵 เงินสด</button>
   <button onclick="checkout('transfer')" class="flex-1 bg-indigo-600 py-3 rounded text-lg">📲 โอนเงิน</button>
 </div>
 
-<!-- ปุ่มยกเลิก -->
 <button onclick="cancelOrder()" class="w-full mt-2 bg-red-600 py-2 rounded text-lg">
   ❌ ยกเลิกออเดอร์
 </button>
 
-<!-- MODAL ชำระเงิน -->
+<!-- ================= MODAL เสริมขนมจีน ================= -->
+<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
+  <div class="bg-slate-800 p-4 rounded w-80">
+    <h2 id="addonTitle" class="text-lg font-bold mb-2 text-center"></h2>
+
+    <label class="block">
+      <input type="checkbox" id="addonSpecial"> พิเศษ +10
+    </label>
+
+    <label class="block mt-1">
+      <input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10
+    </label>
+
+    <select id="mixSelect" class="w-full text-black mt-1 hidden"></select>
+
+    <label class="block mt-1">
+      <input type="checkbox" id="addonEgg"> เพิ่มไข่ต้ม +10
+    </label>
+
+    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
+      ➕ เพิ่มลงบิล
+    </button>
+
+    <button onclick="closeAddon()" class="mt-2 bg-slate-600 w-full py-1 rounded">
+      ยกเลิก
+    </button>
+  </div>
+</div>
+
+<!-- ================= MODAL ชำระเงิน ================= -->
 <div id="payModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
   <div class="bg-slate-800 p-4 rounded w-80">
     <h2 id="payTitle" class="text-lg font-bold mb-3 text-center"></h2>
 
     <!-- โอนเงิน -->
     <div id="transferBox" class="hidden text-center">
-      <img id="ppQR" class="mx-auto mb-3 w-56" />
+      <img id="ppQR" class="mx-auto mb-3 w-56">
       <button onclick="confirmPay('transfer')" class="bg-indigo-600 w-full py-2 rounded">
         ✅ ยืนยันรับโอน
       </button>
@@ -58,138 +86,204 @@
     <!-- เงินสด -->
     <div id="cashBox" class="hidden">
       <label>รับเงิน</label>
-      <input id="cashInput" type="number" class="w-full p-2 text-black rounded mb-2" oninput="calcChange()">
-      <div class="mb-2">เงินทอน: <span id="changeText">0</span> บาท</div>
-      <button onclick="confirmPay('cash')" class="bg-emerald-600 w-full py-2 rounded">
+      <input id="cashInput" type="number"
+        class="w-full p-2 text-black rounded mb-2"
+        oninput="calcChange()">
+      <div>เงินทอน: <span id="changeText">0</span> บาท</div>
+      <button onclick="confirmPay('cash')" class="mt-2 bg-emerald-600 w-full py-2 rounded">
         ✅ ยืนยันรับเงิน
       </button>
     </div>
 
-    <button onclick="cancelOrder()" class="mt-3 w-full bg-red-600 py-1 rounded">
-      ❌ ยกเลิกออเดอร์
-    </button>
-  </div>
-</div>
-
-<!-- MODAL เสริมขนมจีน -->
-<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80">
-    <h2 id="addonTitle" class="text-lg font-bold mb-3 text-center"></h2>
-
-    <label class="block"><input type="checkbox" id="addonSpecial"> พิเศษ +10</label>
-    <label class="block"><input type="checkbox" id="addonMix"> ผสมน้ำ +10</label>
-    <label class="block"><input type="checkbox" id="addonEgg"> เพิ่มไข่ต้ม +10</label>
-
-    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
-      ➕ เพิ่มลงบิล
+    <button onclick="closePay()" class="mt-3 bg-red-600 w-full py-1 rounded">
+      ❌ ยกเลิก
     </button>
   </div>
 </div>
 
 <script>
+/* ================= CONFIG ================= */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
 const PROMPTPAY_ID = "0936494961";
 
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+/* ================= DATA ================= */
 let products = [];
 let cart = [];
-let selectedProduct = null;
+let currentProduct = null;
 
-/* โหลดเมนู */
+/* ================= LOAD PRODUCTS ================= */
 async function loadProducts() {
   const { data } = await db.from('products').select('*').eq('active', true);
   products = data;
   loadCategory('ขนมจีน');
 }
 
+/* ================= CATEGORY ================= */
 function loadCategory(cat) {
-  const menu = document.getElementById('menu');
   menu.innerHTML = '';
   products.filter(p => p.category === cat).forEach(p => {
-    const btn = document.createElement('button');
-    btn.className = "bg-slate-700 p-4 rounded";
-    btn.innerText = `${p.name}\n${p.price} บาท`;
-    btn.onclick = () => addItem(p);
-    menu.appendChild(btn);
+    const b = document.createElement('button');
+    b.className = 'bg-slate-700 p-4 rounded';
+    b.innerText = `${p.name}\n${p.price} บาท`;
+    b.onclick = () => addItem(p);
+    menu.appendChild(b);
   });
 }
 
+/* ================= ADD ITEM ================= */
 function addItem(p) {
   if (p.category === 'ขนมจีน') {
-    selectedProduct = p;
-    document.getElementById('addonTitle').innerText = p.name;
-    document.getElementById('addonModal').classList.remove('hidden');
-    document.getElementById('addonModal').classList.add('flex');
-    return;
+    currentProduct = p;
+    addonTitle.innerText = `${p.name} (${p.price} บาท)`;
+    buildMixOptions(p.name);
+    addonModal.classList.remove('hidden');
+    addonModal.classList.add('flex');
+  } else {
+    cart.push({ name: p.name, price: p.price });
+    renderBill();
+  }
+}
+
+/* ================= MIX LOGIC ================= */
+function buildMixOptions(mainName) {
+  mixSelect.innerHTML = '<option value="">-- เลือกน้ำที่ผสม --</option>';
+  products
+    .filter(p => p.category === 'ขนมจีน' && p.name !== mainName)
+    .forEach(p => {
+      const o = document.createElement('option');
+      o.value = p.name;
+      o.text = p.name;
+      mixSelect.appendChild(o);
+    });
+}
+
+function toggleMix() {
+  mixSelect.classList.toggle('hidden', !addonMix.checked);
+}
+
+/* ================= CONFIRM ADDON ================= */
+function confirmAddon() {
+  let name = currentProduct.name;
+  let price = currentProduct.price;
+  let detail = [];
+
+  if (addonSpecial.checked) {
+    price += 10;
+    detail.push('พิเศษ');
   }
 
-  cart.push({ name: p.name, price: p.price, qty: 1 });
+  if (addonMix.checked) {
+    if (!mixSelect.value) {
+      alert('กรุณาเลือกน้ำที่จะผสม');
+      return;
+    }
+    price += 10;
+    detail.push(`ผสมน้ำ: ${mixSelect.value}`);
+  }
+
+  if (addonEgg.checked) {
+    price += 10;
+    detail.push('ไข่ต้ม');
+  }
+
+  if (detail.length) name += ` (${detail.join(', ')})`;
+
+  cart.push({ name, price });
+  closeAddon();
   renderBill();
 }
 
-function confirmAddon() {
-  let name = selectedProduct.name;
-  let price = selectedProduct.price;
-
-  if (addonSpecial.checked) { name += ' (พิเศษ)'; price += 10; }
-  if (addonMix.checked) { name += ' (ผสมน้ำ)'; price += 10; }
-  if (addonEgg.checked) { name += ' (+ไข่ต้ม)'; price += 10; }
-
-  cart.push({ name, price, qty: 1 });
-
+function closeAddon() {
+  addonModal.classList.add('hidden');
   addonSpecial.checked = addonMix.checked = addonEgg.checked = false;
-  document.getElementById('addonModal').classList.add('hidden');
-  renderBill();
+  mixSelect.classList.add('hidden');
+  mixSelect.value = '';
 }
 
+/* ================= BILL ================= */
 function renderBill() {
-  const bill = document.getElementById('bill');
   bill.innerHTML = '';
   let total = 0;
   cart.forEach(i => {
-    total += i.price * i.qty;
     bill.innerHTML += `<div>${i.name} = ${i.price}</div>`;
+    total += i.price;
   });
-  document.getElementById('total').innerText = total;
+  total.innerText = total;
 }
 
+/* ================= PAYMENT ================= */
 function checkout(type) {
   if (!cart.length) return alert('ยังไม่มีรายการ');
-  const total = cart.reduce((s,i)=>s+i.price*i.qty,0);
-  document.getElementById('payModal').classList.remove('hidden');
-  document.getElementById('payModal').classList.add('flex');
+  const sum = cart.reduce((s,i)=>s+i.price,0);
+
+  payModal.classList.remove('hidden');
+  payModal.classList.add('flex');
+  cashBox.classList.add('hidden');
+  transferBox.classList.add('hidden');
 
   if (type === 'transfer') {
-    payTitle.innerText = `โอน ${total} บาท`;
+    payTitle.innerText = `โอน ${sum} บาท`;
     transferBox.classList.remove('hidden');
-    ppQR.src = `https://promptpay.io/${PROMPTPAY_ID}/${total.toFixed(2)}.png`;
+    ppQR.src = `https://promptpay.io/${PROMPTPAY_ID}/${sum.toFixed(2)}.png`;
   } else {
-    payTitle.innerText = `เงินสด ${total} บาท`;
+    payTitle.innerText = `เงินสด ${sum} บาท`;
     cashBox.classList.remove('hidden');
+    cashInput.value = '';
+    changeText.innerText = '0';
   }
 }
 
-function confirmPay(type) {
-  alert('บันทึกออเดอร์เรียบร้อย');
-  cart = [];
-  renderBill();
-  payModal.classList.add('hidden');
-}
-
 function calcChange() {
-  const total = cart.reduce((s,i)=>s+i.price*i.qty,0);
-  changeText.innerText = cashInput.value - total;
+  const sum = cart.reduce((s,i)=>s+i.price,0);
+  changeText.innerText = cashInput.value - sum;
 }
 
-function cancelOrder() {
-  if (!confirm('ยกเลิกออเดอร์?')) return;
+async function confirmPay(type) {
+  const sum = cart.reduce((s,i)=>s+i.price,0);
+
+  if (type === 'cash' && Number(cashInput.value) < sum) {
+    alert('รับเงินไม่พอ');
+    return;
+  }
+
+  const { data: order } = await db
+    .from('orders')
+    .insert({ total: sum, payment: type })
+    .select()
+    .single();
+
+  for (const i of cart) {
+    await db.from('order_items').insert({
+      order_id: order.id,
+      product_name: i.name,
+      qty: 1,
+      price: i.price
+    });
+  }
+
   cart = [];
   renderBill();
+  closePay();
+  alert('บันทึกเรียบร้อย');
+}
+
+function closePay() {
   payModal.classList.add('hidden');
 }
 
+/* ================= CANCEL ================= */
+function cancelOrder() {
+  if (!cart.length) return;
+  if (!confirm('ยกเลิกออเดอร์นี้?')) return;
+  cart = [];
+  renderBill();
+  closePay();
+}
+
+/* ================= START ================= */
 loadProducts();
 </script>
 
