--- a/admin.html
+++ b/admin.html
@@ -35,12 +35,13 @@
 </div>
 
 <!-- ตารางสินค้า -->
-<table class="w-full text-sm">
+<table class="w-full text-sm border-collapse">
   <thead>
     <tr class="border-b border-slate-600">
       <th class="text-left py-1">สินค้า</th>
-      <th>ราคา</th>
-      <th>สถานะ</th>
+      <th class="text-center">ราคา</th>
+      <th class="text-center">ขาย</th>
+      <th class="text-center">จัดการ</th>
     </tr>
   </thead>
   <tbody id="list"></tbody>
@@ -51,30 +52,52 @@ const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+/* โหลดสินค้า */
 async function loadProducts() {
-  const { data } = await db.from('products').select('*').order('category');
+  const { data } = await db
+    .from('products')
+    .select('*')
+    .order('category');
+
   list.innerHTML = '';
 
   data.forEach(p => {
     const tr = document.createElement('tr');
+    tr.className = 'border-b border-slate-700';
+
     tr.innerHTML = `
       <td class="py-1">${p.name}</td>
-      <td class="text-center">${p.price}</td>
+
+      <td class="text-center">
+        <input type="number" value="${p.price}"
+          class="w-20 text-black p-1 rounded text-center"
+          onchange="updatePrice('${p.id}', this.value)">
+      </td>
+
       <td class="text-center">
         <input type="checkbox" ${p.active ? 'checked' : ''}
           onchange="toggleActive('${p.id}', this.checked)">
       </td>
+
+      <td class="text-center">
+        <button
+          onclick="deleteProduct('${p.id}', '${p.name}')"
+          class="bg-red-600 px-2 py-1 rounded text-xs">
+          ลบ
+        </button>
+      </td>
     `;
+
     list.appendChild(tr);
   });
 }
 
-async function toggleActive(id, active) {
-  await db.from('products').update({ active }).eq('id', id);
-}
-
+/* เพิ่มสินค้า */
 async function addProduct() {
-  if (!pName.value || !pPrice.value) return alert('กรอกข้อมูลให้ครบ');
+  if (!pName.value || !pPrice.value) {
+    alert('กรอกข้อมูลให้ครบ');
+    return;
+  }
 
   await db.from('products').insert({
     name: pName.value,
@@ -83,7 +106,32 @@ async function addProduct() {
     active: true
   });
 
-  pName.value = pPrice.value = '';
+  pName.value = '';
+  pPrice.value = '';
+  loadProducts();
+}
+
+/* แก้ราคา */
+async function updatePrice(id, price) {
+  if (price <= 0) {
+    alert('ราคาต้องมากกว่า 0');
+    loadProducts();
+    return;
+  }
+
+  await db.from('products').update({ price: Number(price) }).eq('id', id);
+}
+
+/* เปิด / ปิดขาย */
+async function toggleActive(id, active) {
+  await db.from('products').update({ active }).eq('id', id);
+}
+
+/* ลบสินค้า */
+async function deleteProduct(id, name) {
+  if (!confirm(`ต้องการลบสินค้า "${name}" ใช่หรือไม่?`)) return;
+
+  await db.from('products').delete().eq('id', id);
   loadProducts();
 }
 
